--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="offline.min.js"></script>
+    <link rel="stylesheet" href="offline-theme-chrome.css" />
+	<link rel="stylesheet" href="offline-language-english.css" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156352671-2"></script>
 <script>
