--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     <div class="flex" id="home" style="padding-top: 35px;"> <a href="https://ip-info.netlify.com"> <button class="getip"> Home </button> </a> </div>
 </div>
-      <a href="https://github.com/mirajshaikh/" target="_blank"><div class="card" > <img src="https://github.com/mirajshaikh/IP-info/blob/master/github-512.png?raw=true" width="30px"><br> <p> Github </p>  </div>
+      <a href="https://github.com/mirajshaikh/" target="_blank"><div class="card" > <img src="https://raw.githubusercontent.com/mirajshaikh/ip_info/master/github30x30.png" width="30px"><br> <p> Github </p>  </div>
     </div></a>
     
     <script type="text/javascript" src="script.js"></script>
