--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" type="image/jpg" href="favicon.ico"/>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	  <link rel="stylesheet" href="offline-theme-chrome.css" />
 	<link rel="stylesheet" href="offline-language-english.css" />
