addedthe new api

--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
     <div class="container">
       <div class="cont">
         <h1 class="center">IP Location Info</h1>
+        <img id="countryImg" src="" alt="" />
         <p id="ip" class="text"></p>
         <span>
           <h4 id="country" class="text"></h4>
-          <img id="countryImg" src="" alt="" />
         </span>
+        <h4 id="state" class="text"></h4>
         <h4 id="city" class="text"></h4>
+        <h4 id="isp" class="text"></h4>
         <h4 id="currency" class="text"></h4>
-        <h4 id="currencyCode" class="text"></h4>
-        <h4 id="currencySym" class="text"></h4>
        <!-- <input type="text" name="" id="data" value=" 1 "> -->
        <div id="wait"> <img src="ajax-loader (1).gif" alt=""> </div>
         <div id="buttonDiv">
@@ -61,7 +61,7 @@
         <div class="flex1"> <button id="back" class="getip"> Back  </button> <button id="getip" class="getip"> Get IP Info </button>
       </div>
     </div>
-    <div class="flex" id="home" style="padding-top: 35px;"> <a href="https://ip-info.netlify.com"> <button class="getip"> Home </button> </a> </div>
+    <div class="flex" id="home" style="padding-top: 10px;"> <a href="https://ip-info.netlify.com"> <button class="getip"> Home </button> </a> </div>
 </div>
       <a href="https://github.com/mirajshaikh/" target="_blank"><div class="card" > <img src="https://raw.githubusercontent.com/mirajshaikh/ip_info/master/github30x30.png" width="30px"><br> <p> Github </p>  </div>
     </div></a>
