updated api and  style

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
   gtag('config', 'UA-156352671-2');
 </script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Website</title>
+    <meta property="og:title" content="IP Locator - Check Yours IP Location or Someone else" />
+<meta property="og:description" content="IP Locator - Check Yours IP Location or Someone else" />
+<meta property="og:url" content="http://webdevelopmentscripts.com/64-how-to-change-the-address-bar-color-in-chrome-firefox-opera-safari" />
+<meta property="og:image" content="http://webdevelopmentscripts.com/post-images/685b-change-browser-address-bar-color-chrome-android.jpeg" />
+    <title>IP Locator</title>
     
   </head>
   <body>
