--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta property="og:title" content="IP Locator - Check Yours IP Location or Someone else" />
 <meta property="og:description" content="IP Locator - Check Yours IP Location or Someone else" />
-<meta property="og:url" content="http://webdevelopmentscripts.com/64-how-to-change-the-address-bar-color-in-chrome-firefox-opera-safari" />
-<meta property="og:image" content="http://webdevelopmentscripts.com/post-images/685b-change-browser-address-bar-color-chrome-android.jpeg" />
+<meta property="og:url" content="screenshot.png" />
+<meta property="og:image" content="screenshot.png" />
     <title>IP Locator</title>
     
   </head>
