--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta property="og:title" content="IP Locator - Check Yours IP Location or Someone else" />
   <meta property="og:description" content="IP Locator - Check Yours IP Location or Someone else" />
-  <meta property="og:url" content="screenshot.png" />
-  <meta property="og:image" content="screenshot.png" />
+  <meta property="og:url" content="src/img/screenshot.png" />
+  <meta property="og:image" content="src/img/screenshot.png" />
   <title>IP Locator</title>
 
 </head>
@@ -78,7 +78,7 @@
       <div class="flex" id="home" style="padding-top: 10px;"><button class="getip"> Home </button></div>
     </div>
     <a href="https://github.com/mirajshaikh/" target="_blank">
-      <div class="card"> <img src="https://raw.githubusercontent.com/mirajshaikh/ip_info/master/github30x30.png"
+      <div class="card"> <img src="src/img/github30x30.png"
           width="30px"><br>
         <p> Github </p>
       </div>
