--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
             <div id="secound-countainer">
               <div id="ip">
                 <div class="ip-input-container">
-                  <input type="text" class="ip-input-item" value="">
+                  <input type="number" class="ip-input-item" value="">
                   <i class="ip-input-dot"></i>
-                  <input type="text" class="ip-input-item" value="">
+                  <input type="number" class="ip-input-item" value="">
                   <i class="ip-input-dot"></i>
-                  <input type="text" class="ip-input-item" value="">
+                  <input type="number" class="ip-input-item" value="">
                   <i class="ip-input-dot"></i>
-                  <input type="text" class="ip-input-item" value="">
+                  <input type="number" class="ip-input-item" value="">
                 </div>
               </div>
               <div class="flex">
