--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
               <button id="getInfo2" class="infobtn2" type="button">Get Someone's else Info</button>
             </div>
             <div id="secound-countainer">
+              <form>
               <div id="ip">
                 <div class="ip-input-container">
                   <input type="text" pattern="\d*" class="ip-input-item" value="">
@@ -68,6 +69,7 @@
                   <input type="text" pattern="\d*" class="ip-input-item" value="">
                 </div>
               </div>
+            </form>
               <div class="flex">
                 <!-- <input id="ipaddress" class="inputbox" placeholder="Enter The IP Address You Wanna know"> </div> -->
               <div class="flex1"> <button id="back" class="getip"> Back </button> <button id="getip" class="getip"> Get IP
