--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
               <form>
               <div id="ip">
                 <div class="ip-input-container">
-                  <input type="text" pattern="\d*" class="ip-input-item" value="">
+                  <input type="text" pattern="\d*" inputmode="numeric" class="ip-input-item" value="">
                   <i class="ip-input-dot"></i>
-                  <input type="text" pattern="\d*" class="ip-input-item" value="">
+                  <input type="text" pattern="\d*" inputmode="numeric" class="ip-input-item" value="">
                   <i class="ip-input-dot"></i>
-                  <input type="text" pattern="\d*" class="ip-input-item" value="">
+                  <input type="text" pattern="\d*" inputmode="numeric" class="ip-input-item" value="">
                   <i class="ip-input-dot"></i>
-                  <input type="text" pattern="\d*" class="ip-input-item" value="">
+                  <input type="text" pattern="\d*" inputmode="numeric" class="ip-input-item" value="">
                 </div>
               </div>
             </form>
