--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
               <div class="flex">
               <form action="javascript:void(0);" onsubmit="myFunction()">
               <input id="ipaddress" type="tel" class="inputbox" placeholder="Enter The IP Address You Wanna know" minlength="7" maxlength="15" size="15" pattern="^((\d{1,2}|1\d\d|2[0-4]\d|25[0-5])\.){3}(\d{1,2}|1\d\d|2[0-4]\d|25[0-5])$" required="">
-              <div class="flex1"> <a href="index.html"><button class="getip"> Back </button> </a><button id="getip" type="submit" class="getip"> Get IP
-                Info </button>
+              <button id="getip" type="submit" class="getip"> Get IP Info </button>
             </div>
-          </div>
             </form>
+            <div class="flex1"> <button id="back" class="getip"> Back </button>
+            </div>
             </div>
               <!-- <div class="flex"> -->
                 <!-- <input id="ipaddress" class="inputbox" placeholder="Enter The IP Address You Wanna know"> </div> -->
