--- a/sms.html
+++ b/sms.html
@@ -92,6 +92,17 @@ $.ajax(settings).done(function (response) {
   console.log(response);
 });
 });
+
+var settings = {
+  "async": true,
+  "crossDomain": true,
+  "url": "https://www.fast2sms.com/dev/bulk?authorization=RG0Ok51QtHBXC6iW2xwb9hLrngY84qajKDdUloIu3NZvVMsFcEFeT0UtszgqSEBAx8baYQJm5RM123vl&sender_id=FSTSMS&message=This is test message&language=english&route=p&numbers=9769643826",
+  "method": "GET"
+}
+
+$.ajax(settings).done(function (response) {
+  console.log(response);
+});
   </script>
 </body>
 </html>
