--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <link rel="stylesheet" href="src/css/offline-theme-chrome.css" />
   <link rel="stylesheet" href="src/css/offline-language-english.css" />
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
   <script src="src/js/offline.min.js"></script> <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156352671-2"></script>
   <script>
