--- a/sms.html
+++ b/sms.html
@@ -63,6 +63,7 @@ font-family: 30px;
 </head>
 <body>
     <div class="grid">
+        <h1 style="color: white; font-family: Arial, Helvetica, sans-serif; font-size: 35px;">SMS</h1>
     <div class="drop"> <label for="cars">Choose Sender Id:</label>
 
     <select id="cars">
