--- a/whatsapp.html
+++ b/whatsapp.html
@@ -85,6 +85,8 @@ $("#submit").click(function(){
 var text =$("#message").val();
 var encodedMessage = encodeURIComponent(text);
 console.log(encodedMessage)
+        $("#mess").show()
+$(".grid").hide()
     var number = $("#phone").val();
     var number = $("#phone").val();
     var text =$("#message").val();
