--- a/sms.html
+++ b/sms.html
@@ -62,6 +62,7 @@ font-family: 30px;
     </style>
 </head>
 <body>
+     <h1 id="mess" style="color: white; font-family: Arial, Helvetica, sans-serif; padding-top: 40vh; font-size: 35px; text-align: center;"> Message Has Send </h1>
     <div class="grid">
         <h1 style="color: white; font-family: Arial, Helvetica, sans-serif; font-size: 35px;">SMS</h1>
     <div class="drop"> <label for="cars">Choose Sender Id:</label>
@@ -79,12 +80,15 @@ font-family: 30px;
 
 
     <script>
+         $("#mess").hide();
 $("#submit").click(function(){
     var number = $("#phone").val();
     var text =$("#message").val();
 var encodedMessage = encodeURIComponent(text);
 console.log(encodedMessage)
     console.log(number)
+        $("#mess").show()
+$(".grid").hide()
     var settings = {
   "async": true,
   "crossDomain": true,
