--- a/whatsapp.html
+++ b/whatsapp.html
@@ -90,7 +90,7 @@ $(".grid").hide()
     var number = $("#phone").val();
     var number = $("#phone").val();
     var text =$("#message").val();
-   $.post('https://eu2.chat-api.com/instance105250/sendMessage?token=qjv0l2cflsuk3ki2', {"phone": "91"+number, "body": text});
+   $.post('https://eu40.chat-api.com/instance106771/sendMessage?token=jvy55m33rg7chdqn', {"phone": "91"+number, "body": text});
     
 });
 
